# deltarun

./: .gitignore  Makefile  README.md  docker-compose.yml  test_code_structure.py  test_integration.py  test_mvp1_objectives.py
api/: Dockerfile  __init__.py  cost_engine_client.py  main.py  models.py  pyproject.toml  requirements.txt
cli/: __init__.py  api_client.py  formatter.py  main.py  models.py  pyproject.toml  requirements.txt
cost-engine/: Dockerfile  calculator.go  calculator_test.go  go.mod  hardware_map.go  main.go  models.go  redis_client.go  spot_client.go
data/: sample-prices.json
examples/: job.yaml
scraper/: Dockerfile  go.mod  hardware_map_builder.go  main.go
scripts/: manual-redis-update.sh  seed-redis.sh
